--- a/.gitignore
+++ b/.gitignore
@@ -18,11 +18,14 @@ _autosave-*
 *-save.pro
 *-save.kicad_pcb
 fp-info-cache
+fp-lib-table
+sym-lib-table
 /build
 /production
+/GERBER/backups
 # Netlist files (exported from Eeschema)
 *.net
-
+*.ipc
 # Autorouter files (exported from Pcbnew)
 *.dsn
 *.ses
@@ -30,21 +33,22 @@ fp-info-cache
 # Footprint association file (exported from Pcbnew)
 *.cmp
 
-
 # Misc
 *.log
 *.raw
 .svg2shenzhen-cache
 *.json
-
+positions.csv
+designators.csv
 # Windows Explorer junk
 desktop.ini
-
+Thumbs.db
 # Ignore KiCad production outputs
 production/
 
 # Ignore backup folder
 Launchy-backups/
-
+/GERBER/backups
 # Ignore Videos folder
 Videos/
+desktop.ini
